--- a/apps/travel-app/src/index.html
+++ b/apps/travel-app/src/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="manifest" href="manifest.webmanifest" />
 
-    <link rel="apple-touch-icon" href="touch-icon-iphone.png" />
+    <link rel="apple-touch-icon" href="icon-152x152.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="icon-192x192.png" />
     <link rel="apple-touch-icon" sizes="120x120" href="icon-128x128.png" />
     <link rel="apple-touch-icon" sizes="167x167" href="icon-192x192.png" />
