font-display=swap

--- a/apps/travel-app/src/index.html
+++ b/apps/travel-app/src/index.html
@@ -30,10 +30,16 @@
       href="assets/icons/icon-152x152.png"
     />
     <meta name="theme-color" content="#1976d2" />
-      <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-</head>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap"
+      rel="stylesheet"
+    />
+  </head>
   <body class="mat-typography">
     <travel-app-root></travel-app-root>
     <noscript
